--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 :root {
   /*colors*/
@@ -26,13 +26,13 @@
     hsl(240, 2%, 13%);
   --border-gradient-onyx: linear-gradient(
     to bottom right,
-    hsl(0, 0%, 25%) 0%,
-    hsla(0, 0%, 25%, 0) 50%
+    #404040 0%,
+    #40404000 50%
   );
   --text-gradient-yellow: linear-gradient(
     to right,
-    hsl(45, 100%, 72%),
-    hsl(35, 100%, 68%)
+    #ffdb70,
+    #ffbb5c
   );
 
   /* solid */
@@ -44,8 +44,8 @@
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: #fafafa;
-  --orange-yellow-crayola: hsl(45, 100%, 72%);
-  --vegas-gold: hsl(45, 54%, 58%);
+  --orange-yellow-crayola: #ffdb70;
+  --vegas-gold: #ceb15a;
   --light-gray: #d6d6d6;
   --light-gray-70: #d6d6d6b3;
   --bittersweet-shimmer: hsl(0, 43%, 51%);
@@ -77,9 +77,9 @@
    * shadow
    */
 
-  --shadow-1: -4px 8px 24px rgba(0, 0, 0, 0.251);
+  --shadow-1: -4px 8px 24px #00000040;
   --shadow-2: 0 16px 30px rgba(0, 0, 0, 0.25);
-  --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.25);
+  --shadow-3: 0 16px 40px #00000040;
   --shadow-4: 0 25px 50px hsla(0, 0%, 0%, 0.15);
   --shadow-5: 0 24px 80px rgba(0, 0, 0, 0.25);
 
@@ -147,9 +147,9 @@ textarea {
   color: var(--smoky-black);
 }
 
-:focus {
+/**:focus {
   outline-color: var(--orange-yellow-crayola);
-}
+}**/
 
 html {
   font-family: var(--ff-poppins);
@@ -266,6 +266,8 @@ article.active {
   z-index: -1;
 }
 
+.article-title { margin-bottom: 30px; }
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -290,28 +292,6 @@ body {
   }
 }
 
-/* NAV BAR */
-.navbar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: hsla(240, 1%, 17%, 0.75);
-  backdrop-filter: blur(10px);
-  border: 1px solid var(--jet);
-  border-radius: 12px 12px 0 0;
-  box-shadow: var(--shadow-2);
-  z-index: 5;
-}
-
-.navbar-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 0 10px;
-}
-
 .navbar-link {
   color: var(--light-gray);
   font-size: var(--fs-8);
@@ -328,6 +308,87 @@ body {
   color: var(--orange-yellow-crayola);
 }
 
+.modal-container::-webkit-scrollbar {
+  display: none;
+}
+
+.modal-container.active {
+  pointer-events: all;
+  visibility: visible;
+}
+.overlay.active {
+  opacity: 0.8;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.modal-container.active .testimonials-modal {
+  transform: scale(1);
+  opacity: 1;
+}
+
+/** RESUME **/
+
+.timeline-item:not(:last-child)::before {
+  content: "";
+  position: absolute;
+  top: -25px;
+  left: -30px;
+  width: 1px;
+  height: calc(100% + 50px);
+  background: var(--jet);
+}
+
+.timeline-item::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -33px;
+  height: 6px;
+  width: 6px;
+  background: var(--text-gradient-yellow);
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px var(--jet);
+}
+
+.icon-box::before {
+  content: "";
+  position: absolute;
+  inset: 1px;
+  background: var(--eerie-black-1);
+  border-radius: inherit;
+  z-index: -1;
+}
+
+/**CONTACT**/
+textarea.form-input::-webkit-resizer { display: none; }
+.form-input:focus:invalid { border-color: var(--bittersweet-shimmer); }
+.form-btn::before {
+  content: "";
+  position: absolute;
+  inset: 1px;
+  background: var(--bg-gradient-jet);
+  border-radius: inherit;
+  z-index: -1;
+  transition: var(--transition-1);
+}
+.form-btn:hover { background: var(--bg-gradient-yellow-1); }
+
+.form-btn:hover::before { background: var(--bg-gradient-yellow-2); }
+
+.form-btn:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
+.form-btn:disabled:hover { background: var(--border-gradient-onyx); }
+
+.form-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
+
+/*-----------------------------------*\
+  #RESPONSIVE
+\*-----------------------------------*/
+
 @media (min-width: 580px) {
   :root {
     /**
@@ -342,49 +403,254 @@ body {
     --fs-7: 15px;
     --fs-8: 12px;
   }
-  main {
+  /**
+   * #REUSED STYLE
+   */
+
+   article {
+    width: 520px;
+    margin-inline: auto;
+    padding: 30px;
+  }
+
+  .article-title {
+    font-weight: var(--fw-600);
+    padding-bottom: 15px;
+  }
+
+  .article-title::after {
+    width: 40px;
+    height: 5px;
+  }
+  
+  /**
+   * #MAIN
+   */
+
+   main {
     margin-top: 60px;
     margin-bottom: 100px;
   }
-  .navbar {
-    border-radius: 20px 20px 0 0;
+
+  /**
+   * #NAVBAR
+   */
+
+  .navbar { border-radius: 20px 20px 0 0; }
+
+  .navbar-list { gap: 20px; }
+
+  .navbar-link { --fs-8: 14px; }
+
+
+
+  /**
+   * #ABOUT
+   */
+
+  .about .article-title { margin-bottom: 20px; }
+
+  .about-text { margin-bottom: 40px; }
+
+  /* service */
+
+  .service-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 18px;
+    padding: 30px;
   }
 
-  .navbar-list {
-    gap: 20px;
+  .service-icon-box {
+    margin-bottom: 0;
+    margin-top: 5px;
   }
 
-  .navbar-link {
-    --fs-8: 14px;
+  .service-content-box { text-align: left; }
+
+  /* testimonials */
+
+  .testimonials-title { margin-bottom: 25px; }
+
+  .testimonials-list {
+    gap: 30px;
+    margin: 0 -30px;
+    padding: 30px;
+    padding-bottom: 35px;
   }
+
+  .content-card {
+    padding: 30px;
+    padding-top: 25px;
+  }
+
+  .testimonials-avatar-box {
+    transform: translate(30px, -30px);
+    border-radius: 20px;
+  }
+
+  .testimonials-avatar-box img { width: 80px; }
+
+  .testimonials-item-title {
+    margin-bottom: 10px;
+    margin-left: 95px;
+  }
+
+  .testimonials-text {
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+  }
+
+  /* testimonials modal */
+
+  .modal-container { padding: 20px; }
+
+  .testimonials-modal {
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+    gap: 25px;
+    padding: 30px;
+    border-radius: 20px;
+  }
+
+  .modal-img-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .modal-avatar-box {
+    border-radius: 18px;
+    margin-bottom: 0;
+  }
+
+  .modal-avatar-box img { width: 65px; }
+
+  .modal-img-wrapper > img {
+    display: block;
+    flex-grow: 1;
+    width: 35px;
+  }
+
+  /* clients */
+
+  .clients-list {
+    gap: 50px;
+    margin: 0 -30px;
+    padding: 45px;
+    scroll-padding-inline: 45px;
+  }
+
+  .clients-item { min-width: calc(33.33% - 35px); }
+
+
+
+  /**
+   * #RESUME
+   */
+
+  .timeline-list { margin-left: 65px; }
+
+  .timeline-item:not(:last-child)::before { left: -40px; }
+
+  .timeline-item::after {
+    height: 8px;
+    width: 8px;
+    left: -43px;
+  }
+
+  .skills-item:not(:last-child) { margin-bottom: 25px; }
+
+  /**
+   * #CONTACT
+   */
+
+   .mapbox {
+    height: 380px;
+    border-radius: 18px;
+  }
+
+  .input-wrapper {
+    gap: 30px;
+    margin-bottom: 30px;
+  }
+
+  .form-input { padding: 15px 20px; }
+
+  textarea.form-input { margin-bottom: 30px; }
+
+  .form-btn {
+    --fs-6: 16px;
+    padding: 16px 20px;
+  }
+
+  .form-btn ion-icon { font-size: 18px; }
+
 }
 @media (min-width: 768px) {
-  .has-scrollbar::-webkit-scrollbar-button {
-    width: 100px;
+  /**REUSED STYLE**/
+
+   .sidebar, article { width: 700px; }
+
+   .has-scrollbar::-webkit-scrollbar-button { width: 100px; }
+ 
+   /** NAVBAR **/
+ 
+   .navbar-link { --fs-8: 15px; }
+ 
+   /**ABOUT**/
+ 
+   /* testimonials modal */
+ 
+   .testimonials-modal {
+     gap: 35px;
+     max-width: 680px;
+   }
+ 
+   .modal-avatar-box img { width: 80px; }
+ 
+   /** CONTACT **/
+
+  .input-wrapper { grid-template-columns: 1fr 1fr; }
+
+  .form-btn {
+    width: max-content;
+    margin-left: auto;
   }
-  .navbar-link {
-    --fs-8: 15px;
-  }
+ 
 }
 @media (min-width: 1024px) {
-  :root {
-    /**
-    * shadow
-    */
+
+   :root {
+
+    /** shadow **/
 
     --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.125);
     --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.125);
     --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.125);
+
   }
-  main {
-    margin-bottom: 60px;
+
+  /** REUSED STYLE **/
+
+  .sidebar, article {
+    width: 950px;
+    box-shadow: var(--shadow-5);
   }
+
+  /** MAIN **/
+
+  main { margin-bottom: 60px; }
 
   .main-content {
     position: relative;
     width: max-content;
     margin: auto;
   }
+
+  /** NAVBAR **/
 
   .navbar {
     position: absolute;
@@ -403,9 +669,28 @@ body {
     padding: 0 20px;
   }
 
-  .navbar-link {
-    font-weight: var(--fw-500);
+  .navbar-link { font-weight: var(--fw-500); }
+
+
+
+  /** ABOUT **/
+
+  /* service */
+
+  .service-list {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px 25px;
   }
+
+  /* testimonials */
+
+  .testimonials-item { min-width: calc(50% - 15px); }
+
+  /* clients */
+
+  .clients-item { min-width: calc(25% - 38px); }
+
+
 }
 @media (min-width: 1250px) {
   /**
@@ -436,6 +721,14 @@ body {
     height: 60px;
   }
 
+  /** REUSED STYLE **/
+
+  .sidebar, article { width: auto; }
+
+  article { min-height: 100%; }
+  
+  /** MAIN **/
+
   main {
     max-width: 1200px;
     margin-inline: auto;
@@ -460,21 +753,3 @@ body {
   }
 }
 
-.modal-container::-webkit-scrollbar {
-  display: none;
-}
-
-.modal-container.active {
-  pointer-events: all;
-  visibility: visible;
-}
-.overlay.active {
-  opacity: 0.8;
-  visibility: visible;
-  pointer-events: all;
-}
-
-.modal-container.active .testimonials-modal {
-  transform: scale(1);
-  opacity: 1;
-}
