--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,6 @@
 :root {
   /*colors*/
   /* gradient */
-
   --bg-gradient-onyx: linear-gradient(to bottom right, #3f3f40 3%, #303030 97%);
   --bg-gradient-jet: linear-gradient(
       to bottom right,
@@ -29,18 +28,15 @@
     #404040 0%,
     #40404000 50%
   );
-  --text-gradient-yellow: linear-gradient(
-    to right,
-    #ffdb70,
-    #ffbb5c
-  );
+  --text-gradient-yellow: linear-gradient(to right, #ffdb70, #ffbb5c);
+  --text-gradient-blue: linear-gradient(to right, #0066ff, #ea52f8);
 
   /* solid */
 
   --jet: #383838;
   --onyx: #2b2b2c;
   --eerie-black-1: #202022;
-  --eerie-black-2: #1e1e1f;
+  --eerie-black-2: rgb(30, 30, 31);
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: #fafafa;
@@ -157,6 +153,7 @@ html {
 
 body {
   background: var(--smoky-black);
+  
 }
 
 article {
@@ -211,19 +208,19 @@ article.active {
   font-weight: var(--fw-500);
 }
 
-.articleTitle {
+.article-title {
   position: relative;
   padding-bottom: 7px;
 }
 
-.articleTitle::after {
+.article-title::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: 30px;
   height: 3px;
-  background: var(--text-gradient-yellow);
+  background: var(--text-gradient-blue);
   border-radius: 3px;
 }
 
@@ -238,7 +235,7 @@ article.active {
 }
 
 .has-scrollbar::-webkit-scrollbar-thumb {
-  background: var(--orange-yellow-crayola);
+  background: var(--text-gradient-blue);
   border-radius: 5px;
 }
 
@@ -266,30 +263,15 @@ article.active {
   z-index: -1;
 }
 
-.article-title { margin-bottom: 30px; }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.article-title {
+  margin-bottom: 30px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.separator {
+  width: 100%;
+  height: 1px;
+  background: var(--jet);
+  margin: 16px 0;
 }
 
 .navbar-link {
@@ -305,7 +287,24 @@ body {
 }
 
 .navbar-link.active {
-  color: var(--orange-yellow-crayola);
+  background: linear-gradient(to right, #0066ff, #ea52f8);
+  background-size: cover;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 600;
+  position: relative;
+}
+
+.navbar-link.active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 15px; /* Coloca el subrayado justo en la parte inferior */
+  width: 100%;
+  height: 2px; /* Grosor del subrayado */
+  background: linear-gradient(to right, rgba(0,102,255,0) 0%, rgba(0,102,255,1) 25%, rgba(234,82,248,1) 75%, rgba(234,82,248,0) 100%);
+  border-radius: 2px;
+  z-index: 1; /* Asegura que el subrayado esté por encima de otros elementos */
 }
 
 .modal-container::-webkit-scrollbar {
@@ -346,7 +345,7 @@ body {
   left: -33px;
   height: 6px;
   width: 6px;
-  background: var(--text-gradient-yellow);
+  background: var(--text-gradient-blue);
   border-radius: 50%;
   box-shadow: 0 0 0 4px var(--jet);
 }
@@ -361,8 +360,12 @@ body {
 }
 
 /**CONTACT**/
-textarea.form-input::-webkit-resizer { display: none; }
-.form-input:focus:invalid { border-color: var(--bittersweet-shimmer); }
+textarea.form-input::-webkit-resizer {
+  display: none;
+}
+.form-input:focus:invalid {
+  border-color: var(--bittersweet-shimmer);
+}
 .form-btn::before {
   content: "";
   position: absolute;
@@ -372,18 +375,77 @@ textarea.form-input::-webkit-resizer { display: none; }
   z-index: -1;
   transition: var(--transition-1);
 }
-.form-btn:hover { background: var(--bg-gradient-yellow-1); }
+.form-btn:hover {
+  background: var(--bg-gradient-yellow-1);
+}
 
-.form-btn:hover::before { background: var(--bg-gradient-yellow-2); }
+.form-btn:hover::before {
+  background: var(--bg-gradient-yellow-2);
+}
 
 .form-btn:disabled {
   opacity: 0.7;
   cursor: not-allowed;
 }
 
-.form-btn:disabled:hover { background: var(--border-gradient-onyx); }
+.form-btn:disabled:hover {
+  background: var(--border-gradient-onyx);
+}
 
-.form-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
+.form-btn:disabled:hover::before {
+  background: var(--bg-gradient-jet);
+}
+
+/** ABOUT **/
+
+.clientes:before,
+.clientes:after{
+  position: absolute;
+  top: 0;
+  width: 50px;
+  height: 100%;
+  content: "";
+  z-index: 2;
+}
+.clientes:before{
+  content: "";
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), rgb(30, 30, 31));
+}
+.clientes:after{
+  content: "";
+  right: 0;
+  background: linear-gradient(to right, rgba(255,255,255,0),rgb(30, 30, 31));
+}
+
+.clientes {
+  overflow: hidden;
+  position: relative;
+}
+
+.clientes-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  animation: slide 30s linear infinite;
+}
+
+.clientes-list img {
+  max-width: 150px;
+  margin: 0 15px;
+  height: auto;
+}
+
+@keyframes slide {
+  from {
+    
+    transform: translatex(0);
+  }
+  to {
+    
+    transform: translatex(-100%);
+  }
+}
 
 /*-----------------------------------*\
   #RESPONSIVE
@@ -407,7 +469,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    * #REUSED STYLE
    */
 
-   article {
+  article {
     width: 520px;
     margin-inline: auto;
     padding: 30px;
@@ -422,12 +484,12 @@ textarea.form-input::-webkit-resizer { display: none; }
     width: 40px;
     height: 5px;
   }
-  
+
   /**
    * #MAIN
    */
 
-   main {
+  main {
     margin-top: 60px;
     margin-bottom: 100px;
   }
@@ -436,21 +498,29 @@ textarea.form-input::-webkit-resizer { display: none; }
    * #NAVBAR
    */
 
-  .navbar { border-radius: 20px 20px 0 0; }
+  .navbar {
+    border-radius: 20px 20px 0 0;
+  }
 
-  .navbar-list { gap: 20px; }
+  .navbar-list {
+    gap: 20px;
+  }
 
-  .navbar-link { --fs-8: 14px; }
-
-
+  .navbar-link {
+    --fs-8: 14px;
+  }
 
   /**
    * #ABOUT
    */
 
-  .about .article-title { margin-bottom: 20px; }
+  .about .article-title {
+    margin-bottom: 20px;
+  }
 
-  .about-text { margin-bottom: 40px; }
+  .about-text {
+    margin-bottom: 40px;
+  }
 
   /* service */
 
@@ -467,11 +537,15 @@ textarea.form-input::-webkit-resizer { display: none; }
     margin-top: 5px;
   }
 
-  .service-content-box { text-align: left; }
+  .service-content-box {
+    text-align: left;
+  }
 
   /* testimonials */
 
-  .testimonials-title { margin-bottom: 25px; }
+  .testimonials-title {
+    margin-bottom: 25px;
+  }
 
   .testimonials-list {
     gap: 30px;
@@ -490,7 +564,9 @@ textarea.form-input::-webkit-resizer { display: none; }
     border-radius: 20px;
   }
 
-  .testimonials-avatar-box img { width: 80px; }
+  .testimonials-avatar-box img {
+    width: 80px;
+  }
 
   .testimonials-item-title {
     margin-bottom: 10px;
@@ -504,7 +580,9 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   /* testimonials modal */
 
-  .modal-container { padding: 20px; }
+  .modal-container {
+    padding: 20px;
+  }
 
   .testimonials-modal {
     display: flex;
@@ -526,7 +604,9 @@ textarea.form-input::-webkit-resizer { display: none; }
     margin-bottom: 0;
   }
 
-  .modal-avatar-box img { width: 65px; }
+  .modal-avatar-box img {
+    width: 65px;
+  }
 
   .modal-img-wrapper > img {
     display: block;
@@ -543,17 +623,21 @@ textarea.form-input::-webkit-resizer { display: none; }
     scroll-padding-inline: 45px;
   }
 
-  .clients-item { min-width: calc(33.33% - 35px); }
-
-
+  .clients-item {
+    min-width: calc(33.33% - 35px);
+  }
 
   /**
    * #RESUME
    */
 
-  .timeline-list { margin-left: 65px; }
+  .timeline-list {
+    margin-left: 65px;
+  }
 
-  .timeline-item:not(:last-child)::before { left: -40px; }
+  .timeline-item:not(:last-child)::before {
+    left: -40px;
+  }
 
   .timeline-item::after {
     height: 8px;
@@ -561,13 +645,15 @@ textarea.form-input::-webkit-resizer { display: none; }
     left: -43px;
   }
 
-  .skills-item:not(:last-child) { margin-bottom: 25px; }
+  .skills-item:not(:last-child) {
+    margin-bottom: 25px;
+  }
 
   /**
    * #CONTACT
    */
 
-   .mapbox {
+  .mapbox {
     height: 380px;
     border-radius: 18px;
   }
@@ -577,72 +663,87 @@ textarea.form-input::-webkit-resizer { display: none; }
     margin-bottom: 30px;
   }
 
-  .form-input { padding: 15px 20px; }
+  .form-input {
+    padding: 15px 20px;
+  }
 
-  textarea.form-input { margin-bottom: 30px; }
+  textarea.form-input {
+    margin-bottom: 30px;
+  }
 
   .form-btn {
     --fs-6: 16px;
     padding: 16px 20px;
   }
 
-  .form-btn ion-icon { font-size: 18px; }
-
+  .form-btn ion-icon {
+    font-size: 18px;
+  }
 }
 @media (min-width: 768px) {
   /**REUSED STYLE**/
 
-   .sidebar, article { width: 700px; }
+  .sidebar,
+  article {
+    width: 700px;
+  }
 
-   .has-scrollbar::-webkit-scrollbar-button { width: 100px; }
- 
-   /** NAVBAR **/
- 
-   .navbar-link { --fs-8: 15px; }
- 
-   /**ABOUT**/
- 
-   /* testimonials modal */
- 
-   .testimonials-modal {
-     gap: 35px;
-     max-width: 680px;
-   }
- 
-   .modal-avatar-box img { width: 80px; }
- 
-   /** CONTACT **/
+  .has-scrollbar::-webkit-scrollbar-button {
+    width: 100px;
+  }
 
-  .input-wrapper { grid-template-columns: 1fr 1fr; }
+  /** NAVBAR **/
+
+  .navbar-link {
+    --fs-8: 15px;
+  }
+
+  /**ABOUT**/
+
+  /* testimonials modal */
+
+  .testimonials-modal {
+    gap: 35px;
+    max-width: 680px;
+  }
+
+  .modal-avatar-box img {
+    width: 80px;
+  }
+
+  /** CONTACT **/
+
+  .input-wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
 
   .form-btn {
     width: max-content;
     margin-left: auto;
   }
- 
 }
 @media (min-width: 1024px) {
-
-   :root {
-
+  :root {
     /** shadow **/
 
     --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.125);
     --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.125);
     --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.125);
-
   }
 
   /** REUSED STYLE **/
 
-  .sidebar, article {
+  .sidebar,
+  article {
     width: 950px;
     box-shadow: var(--shadow-5);
   }
 
   /** MAIN **/
 
-  main { margin-bottom: 60px; }
+  main {
+    margin-bottom: 60px;
+  }
 
   .main-content {
     position: relative;
@@ -669,9 +770,9 @@ textarea.form-input::-webkit-resizer { display: none; }
     padding: 0 20px;
   }
 
-  .navbar-link { font-weight: var(--fw-500); }
-
-
+  .navbar-link {
+    font-weight: var(--fw-500);
+  }
 
   /** ABOUT **/
 
@@ -684,13 +785,15 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   /* testimonials */
 
-  .testimonials-item { min-width: calc(50% - 15px); }
+  .testimonials-item {
+    min-width: calc(50% - 15px);
+  }
 
   /* clients */
 
-  .clients-item { min-width: calc(25% - 38px); }
-
-
+  .clients-item {
+    min-width: calc(25% - 38px);
+  }
 }
 @media (min-width: 1250px) {
   /**
@@ -723,19 +826,25 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   /** REUSED STYLE **/
 
-  .sidebar, article { width: auto; }
+  .sidebar,
+  article {
+    width: auto;
+  }
 
-  article { min-height: 100%; }
-  
+  article {
+    min-height: 100%;
+  }
+
   /** MAIN **/
 
   main {
-    max-width: 1200px;
+    max-width: 1500px;
     margin-inline: auto;
     display: flex;
     justify-content: center;
     align-items: stretch;
     gap: 25px;
+    
   }
 
   .main-content {
@@ -752,4 +861,3 @@ textarea.form-input::-webkit-resizer { display: none; }
     max-width: 700px;
   }
 }
-
