--- a/app/ui/sidebar/sidebar.module.css
+++ b/app/ui/sidebar/sidebar.module.css
@@ -7,10 +7,10 @@
   padding: 15px;
   box-shadow: var(--shadow-1);
   z-index: 1;
-  margin-bottom: 15px;
   max-height: 112px;
   overflow: hidden;
   transition: var(--transition-2);
+  margin-bottom: 15px;
 }
 .sidebar.active { max-height: 405px; }
 
@@ -30,9 +30,9 @@
   justify-content: center;
   align-items: center;
   font-size: 16px;
-  color: var(--orange-yellow-crayola);
   box-shadow: var(--shadow-1);
   z-index: 1;
+  color: #0066ff;
 }
 
 .iconBox::before {
@@ -56,6 +56,7 @@
 .avatarBox {
   background: var(--bg-gradient-onyx);
   border-radius: 20px;
+  padding: 15px;
 }
 
 .infoContent .name {
