--- a/app/globals.css
+++ b/app/globals.css
@@ -359,6 +359,28 @@ article.active {
   z-index: -1;
 }
 
+/**PORTFOLIO**/
+.filter-select.active .select-icon { transform: rotate(0.5turn); }
+
+.filter-select.active + .select-list {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.select-item button {
+  background: var(--eerie-black-2);
+  color: var(--light-gray);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-300);
+  text-transform: capitalize;
+  width: 100%;
+  padding: 8px 10px;
+  border-radius: 8px;
+}
+
+.select-item button:hover { --eerie-black-2: hsl(240, 2%, 20%); }
+
 /**CONTACT**/
 textarea.form-input::-webkit-resizer {
   display: none;
